Changes for 1.9

 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

Changes for 1.8.2

 - [ZBX-2089] fixed computing calculated items for proxied hosts (asaveljevs,Sasha)
 - [ZBX-2109] disabled Web monitoring for disabled hosts and hosts under maintenance (asaveljevs,Sasha)
 - [ZBX-2121] events from Windows eventlog with type 'EVENTLOG_SUCCESS' are treated as 'Information' in Zabbix as in Windows (Dmitry)
 - [ZBX-1994] using /proc/sys instead of the deprecated sysctl() on Linux (asaveljevs)
 - [ZBXNEXT-236] added support of comma delimited list of host groups in aggregate checks (Sasha)
 - [ZBXNEXT-236] added support of item keys with brackets ("") in aggregate checks (Sasha)
 - [ZBXNEXT-236] added support of arrays in item key parameters (Sasha)
 - [ZBX-1371] improved performance of the configuration screens hostgroups, templates, hosts (Aly)
 - [DEV-452] support of s,m,h,d,w,T suffixes in trigger expressions and functions (asaveljevs,Vedmak)
 - [ZBX-1357] added Ukrainian translation; thanks to zalex_ua (Richlv)
 - [ZBX-2013] fixed error in trigger test screen (Vedmak)
 - [ZBX-2087] fixed permission scheme in actions (Aly)
 - [ZBX-2067] fixed undefined variable errors in actions screen (Aly)
 - [ZBX-2053] fixed evaluating of case sensitivity on the server/agent side of regular expressions (Dmitry)
 - [ZBX-2077] added support of Failure/Success Audit eventlog severity (Sasha)
 - [ZBXNEXT-257] added support of time-based disabling of data collection for items (asaveljevs,Aly,Sasha)
 - [ZBX-2051] fixed memory leak in processing of calculated items (Alexei)
 - [ZBX-886] removed duplicate and outdated strings from locales (Richlv)
 - [ZBX-1790] restored support of the hyphen (-) in item key names (Sasha)
 - [ZBX-1962] explicit 'not monitored' response for active agents on disabled hosts (asaveljevs)
 - [ZBX-1522] fixed server crash on an undefined user macro (asaveljevs)