@@ -544,7 +544,6 @@ DB_RESULT	__zbx_DBselect(const char *fmt, ...);
 
 DB_RESULT	DBselectN(char *query, int n);
 DB_ROW		DBfetch(DB_RESULT result);
-zbx_uint64_t	DBinsert_id(int exec_result, const char *table, const char *field);
 int		DBis_null(char *field);
 void		DBbegin();
 void		DBcommit();
